--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -542,7 +542,8 @@
                             <li class="nav-item"><a data-target="#carouselTop5Managers" href="" data-slide-to="0" class="active">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div id="top5-managers-nav" style="display: block;"><img id="top-manager-nav" src="assets/img/white-helmet.png" style="display: block;"></div>
+                                    <div id="top5-managers-nav" style="display: block;"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/grayoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter">
+                                    </div>
                                     <div class="number">
                                       <p>1</p>
                                     </div>
@@ -621,7 +622,7 @@
                                 <div id="manager1" role="tabpanel" class="tab-pane active">
                                   <div class="row player">
                                     <div class="col-12 col-xs-5 hidden-md-down col-lg-5 no-padding">
-                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/white-helmet.png" style="display: block;" class="img-fluid">
+                                      <div id="top5-managers-picture" style="display: block;"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/grayoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter">
                                         <div class="manager-image-inner">
                                           <div class="number">
                                             <p>1</p>
@@ -648,7 +649,7 @@
                                                 </div>
                                                 <div class="row"> 
                                                   <div class="col-10">
-                                                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                                                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                                                   </div>
                                                 </div>
                                               </div>
@@ -774,7 +775,7 @@
                                                 </div>
                                                 <div class="row"> 
                                                   <div class="col-10">
-                                                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                                                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                                                   </div>
                                                 </div>
                                               </div>
@@ -873,7 +874,7 @@
                                 <div id="manager1" role="tabpanel" class="tab-pane active">
                                   <div class="row player">
                                     <div class="col-12 col-xs-5 hidden-md-down col-lg-5">
-                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/white-helmet.png" style="display: block;" class="img-fluid">
+                                      <div id="top5-managers-picture" style="display: block;"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter">
                                         <div class="manager-image-inner">
                                           <div class="number">
                                             <p>3</p>
@@ -900,7 +901,7 @@
                                                 </div>
                                                 <div class="row"> 
                                                   <div class="col-10">
-                                                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                                                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                                                   </div>
                                                 </div>
                                               </div>
@@ -1026,7 +1027,7 @@
                                                 </div>
                                                 <div class="row"> 
                                                   <div class="col-10">
-                                                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                                                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                                                   </div>
                                                 </div>
                                               </div>
@@ -1152,7 +1153,7 @@
                                                 </div>
                                                 <div class="row"> 
                                                   <div class="col-10">
-                                                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                                                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
                                                   </div>
                                                 </div>
                                               </div>
